examples/test/testpolicy2632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2632
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key0: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value1
          key33: value31
          key46: value25
      podSelector:
        matchLabels:
          key39: value40
          key13: value14
